Make Arrow Flight optional and allow database-less config

--- a/.env_example
+++ b/.env_example
@@ -20,8 +20,11 @@ STARROCKS_PORT=9030
 STARROCKS_USER=root
 STARROCKS_PASSWORD=
 STARROCKS_DB=
+# Leaving STARROCKS_DB empty allows the API to switch between any database
+# that the configured user can access.
 STARROCKS_POOL_SIZE=10
 STARROCKS_CONNECTION_TIMEOUT=10
 
-# Enable Arrow Flight SQL support when available.
-STARROCKS_FE_ARROW_FLIGHT_SQL_PORT=
+# Optional: enable Arrow Flight SQL when available (StarRocks 3.4+).
+# Leave this unset for clusters without the Arrow Flight SQL service.
+# STARROCKS_FE_ARROW_FLIGHT_SQL_PORT=9408
