Advertise public API URL in OpenAPI document

--- a/.env_example
+++ b/.env_example
@@ -8,6 +8,9 @@ STARROCKS_API_BEARER_TOKEN=change-me
 STARROCKS_API_HOST=0.0.0.0
 STARROCKS_API_PORT=8002
 STARROCKS_API_LOG_LEVEL=info
+# Public base URL advertised via OpenAPI (include any reverse proxy prefix such as /api).
+# Defaults to http://localhost:8002 when unset. Uncomment and update for production deployments.
+# STARROCKS_API_PUBLIC_URL=https://starrocks-mcp.devicesformula.com/api
 
 # Optional overrides for data summarisation/plotting behaviour.
 STARROCKS_OVERVIEW_LIMIT=20000
